--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -14,28 +14,28 @@ jobs:
         with:
           fetch-depth: 0
 
-      # - name: Log in to Docker Hub
-      #   uses: docker/login-action@v3
-      #   with:
-      #     username: ${{secrets.DOCKER_USERNAME}}
-      #     password: ${{secrets.DOCKER_ACCESS_TOKEN}}
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{secrets.DOCKER_USERNAME}}
+          password: ${{secrets.DOCKER_ACCESS_TOKEN}}
 
-      # - uses: actions/setup-node@v3
-      #   with:
-      #     cache: 'npm'
-      #     node-version-file: '.nvmrc'
+      - uses: actions/setup-node@v3
+        with:
+          cache: 'npm'
+          node-version-file: '.nvmrc'
 
-      # - name: 'Install Dependencies'
-      #   run: npm ci --omit=dev --legacy-peer-deps
+      - name: 'Install Dependencies'
+        run: npm ci --omit=dev --legacy-peer-deps
 
-      # - name: Derive appropriate SHAs
-      #   uses: nrwl/nx-set-shas@v3
+      - name: Derive appropriate SHAs
+        uses: nrwl/nx-set-shas@v3
 
-      # - name: 'Build Core-App'
-      #   run: INPUT_GITHUB_TOKEN=${{ secrets.GITHUB_TOKEN }} npx nx container core-app
+      - name: 'Build Core-App'
+        run: INPUT_GITHUB_TOKEN=${{ secrets.GITHUB_TOKEN }} npx nx container core-app
 
-      # - name: 'Build Partner-App'
-      #   run: INPUT_GITHUB_TOKEN=${{ secrets.GITHUB_TOKEN }} npx nx container partner-app
+      - name: 'Build Partner-App'
+        run: INPUT_GITHUB_TOKEN=${{ secrets.GITHUB_TOKEN }} npx nx container partner-app
 
       - name: Copy docker folder to EC2 instance
         uses: appleboy/scp-action@master
