--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -38,14 +38,14 @@ jobs:
         run: INPUT_GITHUB_TOKEN=${{ secrets.GITHUB_TOKEN }} npx nx container partner-app
 
       - name: Copy docker folder to EC2 instance
-        uses: appleboy/scp-action@v0.1.4
+        uses: appleboy/scp-action@master
         with:
           host: ${{ secrets.STAGING_EC2_HOST }}
           username: ${{ secrets.STAGING_EC2_USERNAME }}
           key: ${{ secrets.STAGING_EC2_SSH_KEY }}
           source: ./docker/staging/
           target: ~/app
-          timeout: 120s
+          timeout: 60s
 
       - name: SSH into EC2 instance and deploy app
         uses: appleboy/ssh-action@master
