--- a/docker/staging/docker-compose.yml
+++ b/docker/staging/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.7'
 
 services:
   web:
-    image: omdenaai/core-app:latest
+    image: minhtetmyet/core-app:latest
     ports:
       - '3000:3000'
     networks:
@@ -21,7 +21,7 @@ services:
         delay: 10s
 
   partnerapp:
-    image: omdenaai/partner-app:latest
+    image: minhtetmyet/partner-app:latest
     ports:
       - '4000:4000'
     networks:
