--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -1,4 +1,5 @@
 name: Staging CI/CD
+
 on:
   push:
     branches: ['staging']
@@ -8,6 +9,7 @@ jobs:
     name: Deploy
     runs-on: ubuntu-latest
     timeout-minutes: 20
+
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -17,8 +19,8 @@ jobs:
       - name: Log in to Docker Hub
         uses: docker/login-action@v3
         with:
-          username: ${{secrets.DOCKER_USERNAME}}
-          password: ${{secrets.DOCKER_ACCESS_TOKEN}}
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_ACCESS_TOKEN }}
 
       - uses: actions/setup-node@v3
         with:
@@ -55,9 +57,11 @@ jobs:
           key: ${{ secrets.STAGING_EC2_SSH_KEY }}
           script: |
             cd ~/app/docker/staging
-            echo '${{secrets.STAGING_ENV_FILE}}' > .env
-            echo '${{secrets.DOCKER_ACCESS_TOKEN}}' > docker_password
+            echo '${{ secrets.STAGING_ENV_FILE }}' > .env
+            echo '${{ secrets.DOCKER_ACCESS_TOKEN }}' > docker_password
+            docker network create -d overlay --attachable loe_network || true
             make prune
             make pull
             make down
             make up
+            rm -f docker_password
